# nvim-ui

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Input.cpp  Input.hpp  LICENSE  MsgPackRpc.cpp  MsgPackRpc.hpp  README.md  RedrawHandler.cpp  RedrawHandler.hpp  Renderer.cpp  Renderer.hpp  Timer.hpp  build.sh  config.sh  main.cpp  meson.build  nvim
.githooks/: pre-commit  prepare-commit-msg
.github/workflows/: build-mingw.yml  build-msvc.yml  notes.md  pre-release-mingw.yml  release-mingw.yml  release.yml
chocolatey/: neovim-sdl2.nuspec  nvim-ui.nuspec
chocolatey/tools/: LICENSE.txt  VERIFICATION.txt
doc/: debug.md  rendering.md
patches/: 0001-Use-msgpack-c-instead-of-cpp.patch  PKGBUILD  texture-visible-alive.patch
po/: POTFILES  nvim-ui.pot  uk.po
res/: com.sakhnik.nvim-ui.gschema.xml  connect-dlg.ui  glib-compile-schemas.py  glib-compile-schemas.sh  main.glade  main.ui  menus.ui  meson.build  nvim-ui.desktop  res.xml  settings-dlg.ui  svg2ico.sh  windows.rc
scripts/: build.sh  genappimage.sh  gh-release.sh  install-mingw.sh  package-nupkg.sh  package.sh  prepare-gtkpp.sh  prerelease.sh  release.sh  run-sh.ps1  setup-lsp.sh  update-po.sh  version.sh
src/: AsyncExec.cpp  AsyncExec.hpp  BaseTexture.cpp  BaseTexture.hpp  GCallbackAdaptor.hpp  GConfig.cpp  GConfig.hpp  GCursor.cpp  GCursor.hpp  GFont.cpp  GFont.hpp  GGrid.cpp  GGrid.hpp  GPointer.cpp  GPointer.hpp  GSettingsDlg.cpp  GSettingsDlg.hpp  GWindow.cpp  GWindow.hpp  GlibLoop.cpp  GlibLoop.hpp  GridLine.cpp  GridLine.hpp  HlAttr.hpp  IMenuBarToggler.hpp  IWindow.hpp  IWindowHandler.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  MsgPackRpc.cpp  MsgPackRpc.hpp  Painter.cpp  Painter.hpp  RedrawHandler.cpp  RedrawHandler.hpp  Renderer.cpp  Renderer.hpp  SdlLoop.cpp  (+22 more)
src/pch/: all-gtk.hpp  all.hpp
tests/: CMakeLists.txt  GridLine.cpp  Renderer.cpp  TextureCache.cpp  meson.build  test.cpp
